# task-tracker-backend-fastapi

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml  codeql-analysis.yml  main.yml
apis/: __init__.py  auth.py  ping.py  todo.py
apis/models/: auth.py  todo.py
core/: auth.py  config.py  fileops.py  startup.py  todo.py
data/: 1.json  __init__.py  config_example.env  config_example.yaml  decrypt_encrypt.py  users.json
src/: main.py
src/apis/: __init__.py  auth.py  todo.py
src/core/: auth.py  config.py  todo.py
src/core/db/: crud.py  database.py  models.py  schemas.py
src/models/: auth.py  todo.py
tests/: conftest.py  test_auth.py  test_auth_encrypted.py  test_auth_plain.py  test_config.py  test_todo.py  test_todo_encrypted.py  test_todo_plain.py
